--- a/templates/accedi.html
+++ b/templates/accedi.html
@@ -30,11 +30,11 @@
     <form action="/login" method="POST">
     <div class="mb-2 mt-3 w-25">
       <label class="a" for="email">Email:</label>
-      <input type="email" placeholder="Inserisci email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+      <input type="email" placeholder="Inserisci email" class="form-control" id="email" name="email" required>
     </div>
     <div class="mb-2 w-25">
       <label for="pass">Password:</label>
-      <input type="pass" placeholder="Inserisci password" class="form-control" id="pass" placeholder="Enter password" name="pass" required>
+      <input type="password" placeholder="Inserisci password" class="form-control" id="pass" name="pass" required>
     </div>
     <button type="submit" class="btn btn-success">Login</button>
   </form>
