--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,16 @@
     {% block head %}
     <title>{% block title %}{% endblock %} - Pasticceria Da Sofia </title>
     {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <style>
 @import url(https://fonts.googleapis.com/css?family=Zen Antique Soft);
@@ -24,19 +29,15 @@ h1, h2, h3, h4, h5{
   font-family: 'Zen Antique Soft';
 }
 
-a:link, a:visited {
-  text-decoration: none;
-  color: black;
-}
 </style>
 <div class="container-fluid p-2 text-white text-center" style="background-color: #AFC2BE;">
     <h1>Pasticceria Da Sofia</h1>
 </div>
 <div class="container-fluid p-1" style="background-color: #AFC2BE;">
     {% if current_user.is_authenticated %}
-    <a href="/logout">Log Out</a>
+    <a style="color: black;" href="/logout">Log Out</a>
     {% else %}
-    <a href="/accedi">Accedi</a>
+    <a style="color: black;" href="/accedi">Accedi</a>
     {% endif %}
 </div>
 <div class="container-fluid p-3 text-white text-center" style="background-color: #fff;">
